created mobile version of detailes

--- a/pages/borehole/borehole.html
+++ b/pages/borehole/borehole.html
@@ -54,7 +54,7 @@
                             <p class="main__subtitle">экономичная и № 1 по эффективности
                                 для отопления и охлаждения</p>
                             <div class="main__buttons">
-                                <button class="main__btn" href="#application">Оставить заявку</button>
+                                <a class="main__btn" href="../../index.html#application">Оставить заявку</a>
                                 <a class="main__btn" href="../calculatePage/calculate.html">Сделать расчет</a>
                             </div>
                         </div>
