--- a/pages/detailes/detailes.html
+++ b/pages/detailes/detailes.html
@@ -245,46 +245,50 @@
             </div>
         </footer>
         <div class="mobile__bottom_navbar">
-            <button class="mobile__bottom__button home">
+            <button class="mobile__bottom__button home" onclick="changeURL('http://localhost:63343/polaredge/index.html')">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="sr-home">
                         <path id="line" fill-rule="evenodd" clip-rule="evenodd"
                               d="M13.635 1.36992C12.6408 0.723697 11.3592 0.723698 10.365 1.36992L2.36503 6.56992C1.51366 7.12332 1 8.06983 1 9.08525V19.9999C1 21.6567 2.34315 22.9999 4 22.9999H20C21.6569 22.9999 23 21.6567 23 19.9999V9.08525C23 8.06983 22.4863 7.12332 21.635 6.56992L13.635 1.36992ZM11.455 3.04681C11.7864 2.8314 12.2136 2.8314 12.545 3.04681L20.545 8.24681C20.8288 8.43128 21 8.74678 21 9.08525V19.9999C21 20.5522 20.5523 20.9999 20 20.9999H15.9998L16 13.4614C16 11.3738 14.0151 9.99988 12.0001 9.99988C9.98507 9.99988 8.00017 11.3738 8.00016 13.4614L8 20.9999L9.18182 20.9999H4C3.44772 20.9999 3 20.5522 3 19.9999V9.08525C3 8.74678 3.17122 8.43128 3.45501 8.24681L11.455 3.04681ZM10 20.9999H15.1817L13.9998 20.9999L14 13.4614C14 12.8301 13.2987 11.9999 12.0001 11.9999C10.7015 11.9999 10.0002 12.8301 10.0002 13.4614L10 20.9999Z"
-                              fill="#118DF0"/>
+                              fill="#333333"/>
                     </g>
                 </svg>
                 <p>Главная</p>
             </button>
-            <svg class="mobile__calculate_button" width="84" height="84" viewBox="0 0 84 84" fill="none"
-                 xmlns="http://www.w3.org/2000/svg">
-                <g filter="url(#filter0_d_28_12)">
-                    <rect x="10" y="2" width="64" height="64" rx="12" fill="#333333"/>
-                    <path d="M39.3333 24.6667C38.597 24.6667 38 25.2636 38 26C38 26.7364 38.597 27.3333 39.3333 27.3333H50C50.7364 27.3333 51.3333 26.7364 51.3333 26C51.3333 25.2636 50.7364 24.6667 50 24.6667H39.3333Z"
-                          fill="white"/>
-                    <path d="M50 32.6667L39.3333 32.6667C38.597 32.6667 38 32.0697 38 31.3333C38 30.5969 38.597 30 39.3333 30L50 30C50.7364 30 51.3333 30.5969 51.3333 31.3333C51.3333 32.0697 50.7364 32.6667 50 32.6667Z"
-                          fill="white"/>
-                    <path d="M39.3333 35.3333C38.597 35.3333 38 35.9303 38 36.6667C38 37.403 38.597 38 39.3333 38H43.3333C44.0697 38 44.6667 37.403 44.6667 36.6667C44.6667 35.9303 44.0697 35.3333 43.3333 35.3333H39.3333Z"
-                          fill="white"/>
-                    <path fill-rule="evenodd" clip-rule="evenodd"
-                          d="M32.6667 44.6667V35.3333H31.3333C29.1242 35.3333 27.3333 33.5425 27.3333 31.3333V23.3333C27.3333 21.1242 29.1242 19.3333 31.3333 19.3333H52.6667C54.8758 19.3333 56.6667 21.1242 56.6667 23.3333V44.6667C56.6667 46.8758 54.8758 48.6667 52.6667 48.6667H36.6667C34.4575 48.6667 32.6667 46.8758 32.6667 44.6667ZM30 23.3333C30 22.5969 30.597 22 31.3333 22C32.0697 22 32.6667 22.5969 32.6667 23.3333V32.6667H31.3333C30.597 32.6667 30 32.0697 30 31.3333V23.3333ZM35.3333 23.3333C35.3333 22.8658 35.2531 22.417 35.1057 22H52.6667C53.403 22 54 22.5969 54 23.3333V44.6667C54 45.403 53.403 46 52.6667 46H36.6667C35.9303 46 35.3333 45.403 35.3333 44.6667V23.3333Z"
-                          fill="white"/>
-                </g>
-                <defs>
-                    <filter id="filter0_d_28_12" x="0" y="0" width="84" height="84" filterUnits="userSpaceOnUse"
-                            color-interpolation-filters="sRGB">
-                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
-                                       result="hardAlpha"/>
-                        <feOffset dy="8"/>
-                        <feGaussianBlur stdDeviation="5"/>
-                        <feColorMatrix type="matrix"
-                                       values="0 0 0 0 0.227451 0 0 0 0 0.227451 0 0 0 0 0.227451 0 0 0 0.2 0"/>
-                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_28_12"/>
-                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_28_12" result="shape"/>
-                    </filter>
-                </defs>
-            </svg>
-            <button class="mobile__bottom__button borehole">
+            <button class="mobile__calculate_button" onclick="changeURL('http://localhost:63343/polaredge/pages/calculatePage/calculate.html')">
+                <svg width="84" height="84" viewBox="0 0 84 84" fill="none"
+                     xmlns="http://www.w3.org/2000/svg">
+                    <g filter="url(#filter0_d_28_12)">
+                        <rect x="10" y="2" width="64" height="64" rx="12" fill="#333333"/>
+                        <path d="M39.3333 24.6667C38.597 24.6667 38 25.2636 38 26C38 26.7364 38.597 27.3333 39.3333 27.3333H50C50.7364 27.3333 51.3333 26.7364 51.3333 26C51.3333 25.2636 50.7364 24.6667 50 24.6667H39.3333Z"
+                              fill="white"/>
+                        <path d="M50 32.6667L39.3333 32.6667C38.597 32.6667 38 32.0697 38 31.3333C38 30.5969 38.597 30 39.3333 30L50 30C50.7364 30 51.3333 30.5969 51.3333 31.3333C51.3333 32.0697 50.7364 32.6667 50 32.6667Z"
+                              fill="white"/>
+                        <path d="M39.3333 35.3333C38.597 35.3333 38 35.9303 38 36.6667C38 37.403 38.597 38 39.3333 38H43.3333C44.0697 38 44.6667 37.403 44.6667 36.6667C44.6667 35.9303 44.0697 35.3333 43.3333 35.3333H39.3333Z"
+                              fill="white"/>
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                              d="M32.6667 44.6667V35.3333H31.3333C29.1242 35.3333 27.3333 33.5425 27.3333 31.3333V23.3333C27.3333 21.1242 29.1242 19.3333 31.3333 19.3333H52.6667C54.8758 19.3333 56.6667 21.1242 56.6667 23.3333V44.6667C56.6667 46.8758 54.8758 48.6667 52.6667 48.6667H36.6667C34.4575 48.6667 32.6667 46.8758 32.6667 44.6667ZM30 23.3333C30 22.5969 30.597 22 31.3333 22C32.0697 22 32.6667 22.5969 32.6667 23.3333V32.6667H31.3333C30.597 32.6667 30 32.0697 30 31.3333V23.3333ZM35.3333 23.3333C35.3333 22.8658 35.2531 22.417 35.1057 22H52.6667C53.403 22 54 22.5969 54 23.3333V44.6667C54 45.403 53.403 46 52.6667 46H36.6667C35.9303 46 35.3333 45.403 35.3333 44.6667V23.3333Z"
+                              fill="white"/>
+                    </g>
+                    <defs>
+                        <filter id="filter0_d_28_12" x="0" y="0" width="84" height="84" filterUnits="userSpaceOnUse"
+                                color-interpolation-filters="sRGB">
+                            <feFlood flood-opacity="0" result="BackgroundImageFix"/>
+                            <feColorMatrix in="SourceAlpha" type="matrix"
+                                           values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
+                                           result="hardAlpha"/>
+                            <feOffset dy="8"/>
+                            <feGaussianBlur stdDeviation="5"/>
+                            <feColorMatrix type="matrix"
+                                           values="0 0 0 0 0.227451 0 0 0 0 0.227451 0 0 0 0 0.227451 0 0 0 0.2 0"/>
+                            <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_28_12"/>
+                            <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_28_12" result="shape"/>
+                        </filter>
+                    </defs>
+                </svg>
+            </button>
+            <button class="mobile__bottom__button borehole"
+                    onclick="changeURL('http://localhost:63343/polaredge/pages/borehole/borehole.html')">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="sr-twoarrow-collidev2-vertical">
                         <g id="line">
