--- a/pages/detailes/detailes.html
+++ b/pages/detailes/detailes.html
@@ -255,7 +255,7 @@
                 </svg>
                 <p>Главная</p>
             </button>
-            <button class="mobile__calculate_button" onclick="changeURL('http://localhost:63343/polaredge/pages/calculatePage/calculate.html')">
+            <button class="mobile__calculate_button" onclick="changeURL('polaredge/pages/calculatePage/calculate.html')">
                 <svg width="84" height="84" viewBox="0 0 84 84" fill="none"
                      xmlns="http://www.w3.org/2000/svg">
                     <g filter="url(#filter0_d_28_12)">
@@ -288,7 +288,7 @@
                 </svg>
             </button>
             <button class="mobile__bottom__button borehole"
-                    onclick="changeURL('http://localhost:63343/polaredge/pages/borehole/borehole.html')">
+                    onclick="changeURL('polaredge/pages/borehole/borehole.html')">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="sr-twoarrow-collidev2-vertical">
                         <g id="line">
