--- a/pages/borehole/borehole.html
+++ b/pages/borehole/borehole.html
@@ -393,7 +393,7 @@
         </footer>
         <div class="mobile__bottom_navbar">
             <button class="mobile__bottom__button home"
-                    onclick="changeURL('polaredge/index.html')">
+                    onclick="changeURL('index.html')">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
                      xmlns="http://www.w3.org/2000/svg">
                     <g id="sr-home">
@@ -437,7 +437,7 @@
                 </svg>
             </button>
             <button class="mobile__bottom__button borehole"
-                    onclick="changeURL('polaredge/pages/borehole/borehole.html')">
+                    onclick="changeURL('pages/borehole/borehole.html')">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="sr-twoarrow-collidev2-vertical">
                         <g id="line">
