mobile fix for "how-it-works"

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
         <h2 class="title-main text-center slider-title mb-5">Как это работает</h2>
         <div class="slider-content">
             <div class="slider-progress slider-progress-1">
-                <div class="slider-progress-text">
+                <div class="slider-progress-text col-md-6">
                     <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и
                         эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
                     <p>
@@ -375,8 +375,6 @@
         </div>
 
     </div>
-    </div>
-
 </section>
 
 <section class="section-pd news">
