--- a/pages/borehole/borehole.html
+++ b/pages/borehole/borehole.html
@@ -235,29 +235,62 @@
     </div>
 </section>
 
+
 <section class="section-pd how-it-work">
-    <div class="container">
-        <h2 class="title-main text-center mb-4">Как это работает</h2>
+    <div class="container col">
+        <h2 class="title-main text-center slider-title mb-5">Как это работает</h2>
+        <div class="slider-content">
+            <div class="slider-progress slider-progress-1">
+                <div class="slider-progress-text col-md-6">
+                    <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и
+                        эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
+                    <p>
+                        Вода соприкасается с воздухом в помещении, нагретым от тепла людей, техники или солнечного
+                        света. По трубам она поступает в холодильный блок, отдает поглощенное тепло и возвращается в
+                        капиллярные маты уже охлажденной.
+                    </p>
+                    <p>
+                        Благодаря этой схеме в комнате понижается температура и создается комфортный микроклимат.
+                    </p>
+                </div>
 
-        <div class="slider-progress">
-            <div class="slider-progress-button">
-                <button class="slider-num">01</button>
-                <button class="slider-num">02</button>
-                <button class="slider-num">03</button>
+                <div class="slider-line">
+                    <button class="slider-num slider-num1">01</button>
+                </div>
+                <div class="slider-progress-image slider-image-1">
+                    <img src="./img/main/how-it-works/image-1-1.png" alt="Image background"/>
+                    <img src="./img/main/how-it-works/image-1.png" alt="Image Mats"/>
+                </div>
             </div>
-            <div class="slider-progress-content">
-                <div class="slider-progress-item">
-                    <div class="left">
-                        <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
-                    </div>
-                    <div class="right">
-                        <img src="../../img/main/how-it-works/image-1-1.png" alt="Image background" />
-                        <img src="../../img/main/how-it-works/image-1.png" alt="Image Mats"/>
+            <div class="slider-progress slider-progress-2">
+                <div class="slider-progress-text">
+                    <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и
+                        эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
+                </div>
 
-                    </div>
+                <div class="slider-line">
+                    <button class="slider-num slider-num2">02</button>
+                </div>
+                <div class="slider-progress-image slider-image-1">
+                    <img src="./img/main/how-it-works/image-1-1.png" alt="Image background"/>
+                    <img src="./img/main/how-it-works/image-1.png" alt="Image Mats"/>
+                </div>
+            </div>
+            <div class="slider-progress slider-progress-3">
+                <div class="slider-progress-text">
+                    <p>В потолок, стену или пол встраиваются капиллярные маты — система из плотно соединенных легких и
+                        эластичных полипропиленовых трубок. По трубкам циркулирует дистиллированная вода.</p>
+                </div>
+                <div class="slider-line">
+                    <button class="slider-num slider-num3">03</button>
+                </div>
+                <div class="slider-progress-image slider-image-1">
+                    <img src="./img/main/how-it-works/image-1-1.png" alt="Image background"/>
+                    <img src="./img/main/how-it-works/image-1.png" alt="Image Mats"/>
                 </div>
             </div>
         </div>
+
     </div>
 </section>
 
