--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Polaredge</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.17.1/matter.min.js"></script>
+    
+    <script src="./libs/jquery-3.7.1.slim.min.js" defer></script>
+    <script src="./libs/owl/owl.carousel.min.js" defer></script>
     <script src="./libs/gsap/gsap.min.js" defer></script>
     <script src="./libs/gsap/ScrollTrigger.min.js" defer></script>
     <script src="./libs/gsap/ScrollSmoother.min.js" defer></script>
@@ -18,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
+    <link rel="stylesheet" href="./libs/owl/owl.carousel.min.css">
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/design.css">
     <link rel="stylesheet" href="css/responsive.css">
@@ -26,7 +29,7 @@
 <body>
 
 <nav class="navbar">
-    <a href="#" class="navbar-link active">
+    <a href="../../index.html" class="navbar-link active">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd"
                   d="M13.635 1.36992C12.6408 0.723697 11.3592 0.723698 10.365 1.36992L2.36503 6.56992C1.51366 7.12332 1 8.06983 1 9.08525V19.9999C1 21.6567 2.34315 22.9999 4 22.9999H20C21.6569 22.9999 23 21.6567 23 19.9999V9.08525C23 8.06983 22.4863 7.12332 21.635 6.56992L13.635 1.36992ZM11.455 3.04681C11.7864 2.8314 12.2136 2.8314 12.545 3.04681L20.545 8.24681C20.8288 8.43128 21 8.74678 21 9.08525V19.9999C21 20.5522 20.5523 20.9999 20 20.9999H15.9998L16 13.4614C16 11.3738 14.0151 9.99988 12.0001 9.99988C9.98507 9.99988 8.00017 11.3738 8.00016 13.4614L8 20.9999L9.18182 20.9999H4C3.44772 20.9999 3 20.5522 3 19.9999V9.08525C3 8.74678 3.17122 8.43128 3.45501 8.24681L11.455 3.04681ZM10 20.9999H15.1817L13.9998 20.9999L14 13.4614C14 12.8301 13.2987 11.9999 12.0001 11.9999C10.7015 11.9999 10.0002 12.8301 10.0002 13.4614L10 20.9999Z"
@@ -49,7 +52,7 @@
             </svg>
         </span>
     </a>
-    <a href="#" class="navbar-link">
+    <a href="pages/borehole/borehole.html" class="navbar-link">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11 2C11 1.44772 10.5523 1 10 1C9.44771 1 9 1.44772 9 2V8.58578L6.70711 6.29289C6.31658 5.90237 5.68342 5.90237 5.29289 6.29289C4.90237 6.68342 4.90237 7.31658 5.29289 7.70711L9.29289 11.7071C9.48043 11.8946 9.73478 12 10 12C10.2652 12 10.5196 11.8946 10.7071 11.7071L14.7071 7.70711C15.0976 7.31658 15.0976 6.68342 14.7071 6.29289C14.3166 5.90237 13.6834 5.90237 13.2929 6.29289L11 8.58579V2Z"
                   fill="#333333"/>
