delete pages file

--- a/calculate.html
+++ b/calculate.html
@@ -7,12 +7,12 @@
     content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Polaredge</title>
-  <script src="../../libs/gsap/gsap.min.js" defer></script>
-  <script src="../../libs/gsap/ScrollTrigger.min.js" defer></script>
-  <script src="../../libs/gsap/ScrollSmoother.min.js" defer></script>
-  <script src="../../libs/swiper/swiper-bundle.min.js" defer></script>
-  <script src="../../js/app.js" defer></script>
-  <link rel="stylesheet" href="./calculate.css">
+  <script src="libs/gsap/gsap.min.js" defer></script>
+  <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
+  <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+  <script src="libs/swiper/swiper-bundle.min.js" defer></script>
+  <script src="js/app.js" defer></script>
+  <link rel="stylesheet" href="css/calculate.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
 
 </head>
@@ -35,7 +35,7 @@
       </header>
       <main>
         <div class="hero">
-          <a href="../../index.html" class="hero__back_btn">
+          <a href="index.html" class="hero__back_btn">
             <img src="../../img/sr-longarrow-left.svg" alt="">
             <span>Вернуться</span>
           </a>
@@ -49,7 +49,7 @@
               <div class="price">
                 <p class="price__subtitle">Вот столько это будет стоить</p>
                 <div class="price_value">~0 ₸</div>
-                <a class="price__btn" href="../../index.html#application">Оставить заявку</a>
+                <a class="price__btn" href="index.html#application">Оставить заявку</a>
               </div>
             </div>
           </div>
@@ -177,10 +177,10 @@
           <div class="footer__list">
             <div class="list__title">Компания</div>
             <ul>
-              <li><a href="../../index.html#what_is_that">Что это?</a> </li>
-              <li><a href="../../index.html#advantages">Преимущества</a></li>
-              <li><a href="../../index.html#htw">Как это работает</a></li>
-              <li><a href="../../index.html#news">Новости</a></li>
+              <li><a href="index.html#what_is_that">Что это?</a> </li>
+              <li><a href="index.html#advantages">Преимущества</a></li>
+              <li><a href="index.html#htw">Как это работает</a></li>
+              <li><a href="index.html#news">Новости</a></li>
             </ul>
           </div>
           <div class="footer__list">
