--- a/detailes.html
+++ b/detailes.html
@@ -7,15 +7,15 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Polaredge</title>
-    <script src="../../libs/gsap/gsap.min.js" defer></script>
-    <script src="../../libs/gsap/ScrollTrigger.min.js" defer></script>
-    <script src="../../libs/gsap/ScrollSmoother.min.js" defer></script>
-    <script src="../../libs/swiper/swiper-bundle.min.js" defer></script>
-    <script src="../../js/app.js" defer></script>
-    <link rel="stylesheet" href="../../css/design.css">
-    <link rel="stylesheet" href="../../css/responsive.css">
-    <link rel="stylesheet" href="../../css/global.css">
-    <link rel="stylesheet" href="./detailes.css">
+    <script src="libs/gsap/gsap.min.js" defer></script>
+    <script src="libs/gsap/ScrollTrigger.min.js" defer></script>
+    <script src="libs/gsap/ScrollSmoother.min.js" defer></script>
+    <script src="libs/swiper/swiper-bundle.min.js" defer></script>
+    <script src="js/app.js" defer></script>
+    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/detailes.css">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 
@@ -92,7 +92,7 @@
     </div>
 </header>
             <div class="hero">
-                <a href="../../index.html" class="hero__back_btn">
+                <a href="index.html" class="hero__back_btn">
                     <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <g id="sr-longarrow-left">
                             <path id="line" fill-rule="evenodd" clip-rule="evenodd"
