--- a/borehole.html
+++ b/borehole.html
@@ -30,25 +30,31 @@
 
 </head>
 
-<body>
+<body class="app">
+    
 <nav class="navbar">
-    <a href="../../index.html" class="navbar-link">
+    <a href="index.html" class="navbar-link">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M13.635 1.36992C12.6408 0.723697 11.3592 0.723698 10.365 1.36992L2.36503 6.56992C1.51366 7.12332 1 8.06983 1 9.08525V19.9999C1 21.6567 2.34315 22.9999 4 22.9999H20C21.6569 22.9999 23 21.6567 23 19.9999V9.08525C23 8.06983 22.4863 7.12332 21.635 6.56992L13.635 1.36992ZM11.455 3.04681C11.7864 2.8314 12.2136 2.8314 12.545 3.04681L20.545 8.24681C20.8288 8.43128 21 8.74678 21 9.08525V19.9999C21 20.5522 20.5523 20.9999 20 20.9999H15.9998L16 13.4614C16 11.3738 14.0151 9.99988 12.0001 9.99988C9.98507 9.99988 8.00017 11.3738 8.00016 13.4614L8 20.9999L9.18182 20.9999H4C3.44772 20.9999 3 20.5522 3 19.9999V9.08525C3 8.74678 3.17122 8.43128 3.45501 8.24681L11.455 3.04681ZM10 20.9999H15.1817L13.9998 20.9999L14 13.4614C14 12.8301 13.2987 11.9999 12.0001 11.9999C10.7015 11.9999 10.0002 12.8301 10.0002 13.4614L10 20.9999Z" fill="currentColor"/>
         </svg>
         Главная
     </a>
-    <a href="#" class="navbar-link navbar-fav">
+    <a href="calculate.html" class="navbar-link navbar-fav">
         <span class="special-icon">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M13.3335 6.66683C12.5971 6.66683 12.0002 7.26378 12.0002 8.00016C12.0002 8.73654 12.5971 9.3335 13.3335 9.3335H24.0002C24.7365 9.3335 25.3335 8.73654 25.3335 8.00016C25.3335 7.26378 24.7365 6.66683 24.0002 6.66683H13.3335Z" fill="white"/>
-                <path d="M24.0002 14.6668L13.3335 14.6668C12.5971 14.6668 12.0002 14.0699 12.0002 13.3335C12.0002 12.5971 12.5971 12.0002 13.3335 12.0002L24.0002 12.0002C24.7365 12.0002 25.3335 12.5971 25.3335 13.3335C25.3335 14.0699 24.7365 14.6668 24.0002 14.6668Z" fill="white"/>
-                <path d="M13.3335 17.3335C12.5971 17.3335 12.0002 17.9304 12.0002 18.6668C12.0002 19.4032 12.5971 20.0002 13.3335 20.0002H17.3335C18.0699 20.0002 18.6668 19.4032 18.6668 18.6668C18.6668 17.9304 18.0699 17.3335 17.3335 17.3335H13.3335Z" fill="white"/>
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M6.66683 26.6668V17.3335H5.3335C3.12436 17.3335 1.3335 15.5426 1.3335 13.3335V5.3335C1.3335 3.12436 3.12436 1.3335 5.3335 1.3335H26.6668C28.876 1.3335 30.6668 3.12436 30.6668 5.3335V26.6668C30.6668 28.876 28.876 30.6668 26.6668 30.6668H10.6668C8.45769 30.6668 6.66683 28.876 6.66683 26.6668ZM4.00016 5.3335C4.00016 4.59712 4.59712 4.00016 5.3335 4.00016C6.06988 4.00016 6.66683 4.59712 6.66683 5.3335V14.6668H5.3335C4.59712 14.6668 4.00016 14.0699 4.00016 13.3335V5.3335ZM9.3335 5.3335C9.3335 4.86598 9.25329 4.4172 9.10589 4.00016H26.6668C27.4032 4.00016 28.0002 4.59712 28.0002 5.3335V26.6668C28.0002 27.4032 27.4032 28.0002 26.6668 28.0002H10.6668C9.93045 28.0002 9.3335 27.4032 9.3335 26.6668V5.3335Z" fill="white"/>
+                <path d="M13.3335 6.66683C12.5971 6.66683 12.0002 7.26378 12.0002 8.00016C12.0002 8.73654 12.5971 9.3335 13.3335 9.3335H24.0002C24.7365 9.3335 25.3335 8.73654 25.3335 8.00016C25.3335 7.26378 24.7365 6.66683 24.0002 6.66683H13.3335Z"
+                      fill="currentColor"/>
+                <path d="M24.0002 14.6668L13.3335 14.6668C12.5971 14.6668 12.0002 14.0699 12.0002 13.3335C12.0002 12.5971 12.5971 12.0002 13.3335 12.0002L24.0002 12.0002C24.7365 12.0002 25.3335 12.5971 25.3335 13.3335C25.3335 14.0699 24.7365 14.6668 24.0002 14.6668Z"
+                      fill="currentColor"/>
+                <path d="M13.3335 17.3335C12.5971 17.3335 12.0002 17.9304 12.0002 18.6668C12.0002 19.4032 12.5971 20.0002 13.3335 20.0002H17.3335C18.0699 20.0002 18.6668 19.4032 18.6668 18.6668C18.6668 17.9304 18.0699 17.3335 17.3335 17.3335H13.3335Z"
+                      fill="currentColor"/>
+                <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M6.66683 26.6668V17.3335H5.3335C3.12436 17.3335 1.3335 15.5426 1.3335 13.3335V5.3335C1.3335 3.12436 3.12436 1.3335 5.3335 1.3335H26.6668C28.876 1.3335 30.6668 3.12436 30.6668 5.3335V26.6668C30.6668 28.876 28.876 30.6668 26.6668 30.6668H10.6668C8.45769 30.6668 6.66683 28.876 6.66683 26.6668ZM4.00016 5.3335C4.00016 4.59712 4.59712 4.00016 5.3335 4.00016C6.06988 4.00016 6.66683 4.59712 6.66683 5.3335V14.6668H5.3335C4.59712 14.6668 4.00016 14.0699 4.00016 13.3335V5.3335ZM9.3335 5.3335C9.3335 4.86598 9.25329 4.4172 9.10589 4.00016H26.6668C27.4032 4.00016 28.0002 4.59712 28.0002 5.3335V26.6668C28.0002 27.4032 27.4032 28.0002 26.6668 28.0002H10.6668C9.93045 28.0002 9.3335 27.4032 9.3335 26.6668V5.3335Z"
+                      fill="currentColor"/>
             </svg>
         </span>
     </a>
-    <a href="pages/borehole/borehole.html" class="navbar-link active">
+    <a href="borehole.html" class="navbar-link active">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11 2C11 1.44772 10.5523 1 10 1C9.44771 1 9 1.44772 9 2V8.58578L6.70711 6.29289C6.31658 5.90237 5.68342 5.90237 5.29289 6.29289C4.90237 6.68342 4.90237 7.31658 5.29289 7.70711L9.29289 11.7071C9.48043 11.8946 9.73478 12 10 12C10.2652 12 10.5196 11.8946 10.7071 11.7071L14.7071 7.70711C15.0976 7.31658 15.0976 6.68342 14.7071 6.29289C14.3166 5.90237 13.6834 5.90237 13.2929 6.29289L11 8.58579V2Z" fill="currentColor"/>
             <path d="M17.2929 17.7071C17.6834 18.0976 18.3166 18.0976 18.7071 17.7071C19.0976 17.3166 19.0976 16.6834 18.7071 16.2929L14.7071 12.2929C14.5196 12.1054 14.2652 12 14 12C13.7348 12 13.4804 12.1054 13.2929 12.2929L9.29289 16.2929C8.90237 16.6834 8.90237 17.3166 9.29289 17.7071C9.68342 18.0976 10.3166 18.0976 10.7071 17.7071L13 15.4142V22C13 22.5523 13.4477 23 14 23C14.5523 23 15 22.5523 15 22V15.4142L17.2929 17.7071Z" fill="currentColor"/>
@@ -109,7 +115,7 @@
                         для отопления и охлаждения</p>
                     <div class="btns">
                         <button class="btn btn-pry">Оставить заявку</button>
-                        <button class="btn btn-sndry">Сделать расчет</button>
+                        <a href="calculate.html" class="btn btn-sndry">Сделать расчет</a>
                     </div>
                 </div>
             </div>
@@ -272,9 +278,9 @@
                     <!-- 1 Card -->
                     <div class="card-item">
                         <div class="info">
-                            <span class="card-label">Тишина</span>
-                            <h3>Работает бесшумно</h3>
-                            <p>Вы не услышите звуки устройства, шум внутренних блоков или журчание воды</p>
+                            <span class="card-label">Универсальность</span>
+                            <h3>Обогрев и кондиционирование</h3>
+                            <p>Зимой система работает на отопление, а летом — на охлаждение и увлажнение воздуха.</p>
                         </div>
                         <div class="image">
                             <div class="image-item">
@@ -287,9 +293,9 @@
                     <!-- 2 Card -->
                     <div class="card-item">
                         <div class="info">
-                            <span class="card-label">Чистый воздух</span>
-                            <h3>Не вызывает аллергии и переохлаждения</h3>
-                            <p>С комфортной влажностью и отсутствием вентиляторов не будет сырости, пыли и сквозняков</p>
+                            <span class="card-label">Экономичность</span>
+                            <h3>Не требует дополнительных источников энергии</h3>
+                            <p>Нет нужды покупать уголь, газ или другое топливо. Для работы коллектора нужно только электричество, но его расход окупается в 5-7 раз.</p>
                         </div>
                         <div class="image">
                             <div class="image-item">
@@ -302,9 +308,9 @@
                     <!-- 3 Card -->
                     <div class="card-item">
                         <div class="info">
-                            <span class="card-label">Компактность</span>
-                            <h3>Не сужает пространство</h3>
-                            <p>Установка не заметна под отделкой, не занимает много места и не уменьшает высоту потолков</p>
+                            <span class="card-label">Безопасность</span>
+                            <h3>Защищена от бытовых рисков</h3>
+                            <p>Такой тип отопления не пожароопасен, а благодаря специальному тампонажному материалу коллектор не протекает и не вредит экологии.</p>
                         </div>
                         <div class="image">
                             <div class="image-item">
@@ -317,9 +323,9 @@
                     <!-- 4 Card -->
                     <div class="card-item">
                         <div class="info">
-                            <span class="card-label">Энергоэффективность</span>
-                            <h3>Экономит энергию</h3>
-                            <p>Сокращает потребление электричества на 30% в сравнении с обычными кондиционерами</p>
+                            <span class="card-label">Надежность</span>
+                            <h3>Долговечный источник тепла</h3>
+                            <p>Система использует возобновляемый энергетический ресурс и верно прослужит несколько десятков лет.</p>
                         </div>
                         <div class="image">
                             <div class="image-item">
@@ -329,21 +335,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- 5 Card -->
-                    <div class="card-item">
-                        <div class="info">
-                            <span class="card-label">Гибкость</span>
-                            <h3>Устанавливается на любых поверхностях</h3>
-                            <p>Конструкцию можно поставить на потолках, полах и стенах всех форм и размеров</p>
-                        </div>
-                        <div class="image">
-                            <div class="image-item">
-                                <picture>
-                                    <img src="img/main/advantages/image-5.png" />
-                                </picture>
-                            </div>
-                        </div>
-                    </div>
+                    
 
                 </div>
             </div>
