--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 
-<body>
+<body class="app">
 
 <nav class="navbar">
     <a href="../../index.html" class="navbar-link active">
@@ -37,22 +37,22 @@
         </svg>
         Главная
     </a>
-    <a href="#" class="navbar-link navbar-fav">
+    <a href="calculate.html" class="navbar-link navbar-fav">
         <span class="special-icon">
             <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M13.3335 6.66683C12.5971 6.66683 12.0002 7.26378 12.0002 8.00016C12.0002 8.73654 12.5971 9.3335 13.3335 9.3335H24.0002C24.7365 9.3335 25.3335 8.73654 25.3335 8.00016C25.3335 7.26378 24.7365 6.66683 24.0002 6.66683H13.3335Z"
-                      fill="white"/>
+                      fill="currentColor"/>
                 <path d="M24.0002 14.6668L13.3335 14.6668C12.5971 14.6668 12.0002 14.0699 12.0002 13.3335C12.0002 12.5971 12.5971 12.0002 13.3335 12.0002L24.0002 12.0002C24.7365 12.0002 25.3335 12.5971 25.3335 13.3335C25.3335 14.0699 24.7365 14.6668 24.0002 14.6668Z"
-                      fill="white"/>
+                      fill="currentColor"/>
                 <path d="M13.3335 17.3335C12.5971 17.3335 12.0002 17.9304 12.0002 18.6668C12.0002 19.4032 12.5971 20.0002 13.3335 20.0002H17.3335C18.0699 20.0002 18.6668 19.4032 18.6668 18.6668C18.6668 17.9304 18.0699 17.3335 17.3335 17.3335H13.3335Z"
-                      fill="white"/>
+                      fill="currentColor"/>
                 <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M6.66683 26.6668V17.3335H5.3335C3.12436 17.3335 1.3335 15.5426 1.3335 13.3335V5.3335C1.3335 3.12436 3.12436 1.3335 5.3335 1.3335H26.6668C28.876 1.3335 30.6668 3.12436 30.6668 5.3335V26.6668C30.6668 28.876 28.876 30.6668 26.6668 30.6668H10.6668C8.45769 30.6668 6.66683 28.876 6.66683 26.6668ZM4.00016 5.3335C4.00016 4.59712 4.59712 4.00016 5.3335 4.00016C6.06988 4.00016 6.66683 4.59712 6.66683 5.3335V14.6668H5.3335C4.59712 14.6668 4.00016 14.0699 4.00016 13.3335V5.3335ZM9.3335 5.3335C9.3335 4.86598 9.25329 4.4172 9.10589 4.00016H26.6668C27.4032 4.00016 28.0002 4.59712 28.0002 5.3335V26.6668C28.0002 27.4032 27.4032 28.0002 26.6668 28.0002H10.6668C9.93045 28.0002 9.3335 27.4032 9.3335 26.6668V5.3335Z"
-                      fill="white"/>
+                      fill="currentColor"/>
             </svg>
         </span>
     </a>
-    <a href="pages/borehole/borehole.html" class="navbar-link">
+    <a href="borehole.html" class="navbar-link">
         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M11 2C11 1.44772 10.5523 1 10 1C9.44771 1 9 1.44772 9 2V8.58578L6.70711 6.29289C6.31658 5.90237 5.68342 5.90237 5.29289 6.29289C4.90237 6.68342 4.90237 7.31658 5.29289 7.70711L9.29289 11.7071C9.48043 11.8946 9.73478 12 10 12C10.2652 12 10.5196 11.8946 10.7071 11.7071L14.7071 7.70711C15.0976 7.31658 15.0976 6.68342 14.7071 6.29289C14.3166 5.90237 13.6834 5.90237 13.2929 6.29289L11 8.58579V2Z"
                   fill="#333333"/>
@@ -120,7 +120,7 @@
                             <p>Экологичный комфорт и равномерное распределение температуры по всему помещению</p>
                             <div class="btns">
                                 <button class="btn btn-pry">Оставить заявку</button>
-                                <button class="btn btn-sndry">Сделать расчет</button>
+                                <a href="calculate.html" class="btn btn-sndry">Сделать расчет</a>
                             </div>
                         </div>
                     </div>
@@ -195,14 +195,8 @@
                             <button class="btn btn-pry" onclick="changeURL('pages/detailes/detailes.html')">Узнать
                                 подробнее
                             </button>
-                            <div class="tags" id="tags-container">
-                                <div class="tag">Гидравлический узел</div>
-                                <div class="tag">Регулирующая автоматика</div>
-                                <div class="tag">Защитная автоматика</div>
-                                <div class="tag">Капиллярные маты</div>
-                                <div class="tag">Наружный блок – чиллер</div>
-                                <div class="tag">Трубопроводы ПВХ</div>
-                            </div>
+                            
+                            <img src="img/main/polaredge-fall.gif" />
                         </div>
                     </div>
                     <div class="col-md-3">
