--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a class="link" href="#">
                     Как это работает
                 </a>
-                <a class="link" href="#">
+                <a class="link" href="#news">
                     Новости
                 </a>
                 <button class="lang">
@@ -106,10 +106,7 @@
         </div>
     </div>
 </header>
-<div class="smoother-wrapper">
-    <div class="smoother-content">
-
-        <section class="hero-block">
+ <section class="hero-block">
             <div class="container">
                 <div class="row">
                     <div class="col-md-7">
@@ -399,7 +396,7 @@
             </div>
         </section>
 
-        <section class="section-pd news">
+        <section class="section-pd news" id="news">
             <div class="container">
                 <div class="row">
 
@@ -711,7 +708,5 @@
             </div>
         </footer>
 
-    </div>
-</div>
 </body>
 </html>
