--- a/detailes.html
+++ b/detailes.html
@@ -102,7 +102,7 @@
         </div>
     </header>
 
-    <section class="section-pd news">
+    <section class="section-pd news-block">
         <div class="container">
             <div class="row">
               <div class="col-md-12">
